--- a/app_flask/main/templates/layout.html
+++ b/app_flask/main/templates/layout.html
@@ -29,13 +29,15 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('accueil') }}"></a>
+              <a class="nav-item nav-link" href="{{ url_for('page_posts') }}">Articles</a>
               <a class="nav-item nav-link" href="{{ url_for('page_statues') }}">Statues</a>
               <a class="nav-item nav-link" href="{{ url_for('page_monuments') }}">Monuments</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="{{ url_for('account') }}">Mon espace perso</a>
+              <a class="nav-item nav-link" href="{{ url_for('new_post') }}">Nouvel Article</a>
+                <a class="nav-item nav-link" href="{{ url_for('account') }}">Mes infos</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Se deconnecter</a>
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Se connecter</a>
