--- a/app_flask/main/templates/layout.html
+++ b/app_flask/main/templates/layout.html
@@ -29,7 +29,7 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('accueil') }}"></a>
-              <a class="nav-item nav-link" href="{{ url_for('page_posts') }}">Articles</a>
+              <a class="nav-item nav-link" href="{{ url_for('posts') }}">Articles</a>
               <a class="nav-item nav-link" href="{{ url_for('page_statues') }}">Statues</a>
               <a class="nav-item nav-link" href="{{ url_for('page_monuments') }}">Monuments</a>
             </div>
