--- a/app_flask/main/templates/register.html
+++ b/app_flask/main/templates/register.html
@@ -5,7 +5,7 @@
     <form action="" method="post">
       {{ form.hidden_tag()}}
       <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Se connecter</legend>
+        <legend class="border-bottom mb-4">Créer un espace perso</legend>
 
         <div class="form-group">
           {{ form.username.label(class="form-control-label") }}
